@@ -75,6 +75,14 @@ def _fix_path(func):
     return wrapper
      
 class TahoeFS(CacheFS):
+    
+    _meta = { 'virtual' : False,
+              'read_only' : False,
+              'unicode_paths' : True,
+              'case_insensitive_paths' : False,
+              'may_block' : False
+             }
+    
     def __init__(self, dircap, timeout=60, autorun=True, largefilesize=10*1024*1024, webapi='http://127.0.0.1:3456'):
         '''
             Creates instance of TahoeFS.
